# lpc55_support

./: AGENTS.md  Cargo.toml  README.md  renovate.json
.github/workflows/: build.yml  format.yml  formatting.yml
lpc55_areas/: Cargo.toml
lpc55_areas/src/: lib.rs
lpc55_isp/: Cargo.toml
lpc55_isp/src/: cmd.rs  isp.rs  lib.rs
lpc55_sign/: Cargo.toml
lpc55_sign/src/: areas.rs  cert.rs  crc_image.rs  debug_auth.rs  lib.rs  sign_ecc.rs  signed_image.rs  verify.rs
lpc55_sign_bin/: Cargo.toml
lpc55_sign_bin/src/: main.rs
measurement_token/: Cargo.toml
measurement_token/src/: lib.rs
src/: areas.rs  crc_image.rs  isp.rs  lib.rs  sign_ecc.rs  signed_image.rs
