[package]
name = "lpc55_support"
version = "0.1.0"
authors = ["Laura Abbott <laura@oxide.computer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parse_int = "0.4.0"
serialport = "3.3.0"
crc-any = "2.3.5"
packed_struct = "0.3.0"
packed_struct_codegen = "0.3.0"
structopt = "0.3.15"
anyhow = "1.0.32"
openssl = "0.10.30"
byteorder = "1.3.4"
ecdsa = { git = "https://github.com/oxidecomputer/RustCrypto_signatures.git", branch = "oxide_branch", default-features = false, features = ["pkcs8"] }
p256 = { git = "https://github.com/oxidecomputer/elliptic-curves.git", branch = "oxide_branch", default-features = false, features = ["pkcs8", "ecdsa", "ecdsa-core"] }
