cargo-features = ["resolver", "named-profiles"]

[workspace]
members = [
    "lpc55_areas",
    "lpc55_sign",
    "lpc55_sign_bin",
    "lpc55_isp",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1", default-features = false, features = ["std"] }
bitfield = { version = "0.14.0", default-features = false }
byteorder = { version = "1.4.3", default-features = false, features = ["std"] }
clap = { version = "4", default-features = false, features = ["std", "derive", "default"] }
colored = { version = "2.0", default-features = false }
crc-any = { version = "2.3.5", default-features = false }
env_logger = { version = "0.10", default-features = false, features = ["auto-color"] }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
log = { version = "0.4", default-features = false }
num-derive = { version = "0.3.3", default-features = false, features = ["full-syntax"] }
num-traits = { version = "0.2.15", default-features = false }
packed_struct = { version = "0.10.0", default-features = false, features = ["std"] }
parse_int = { version = "0.6.0", default-features = false }
rsa = { version = "0.8.1", default-features = false, features = ["std", "pem", "sha2"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serialport = { version = "4.2.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
strum = { version = "0.22", default-features = false, features = ["std"] }
strum_macros = { version = "0.22", default-features = false }
thiserror = { version = "1", default-features = false }
toml = { version = "0.7.3", default-features = false }
x509-parser = { version = "0.12.0", default-features = false, features = ["verify"] }

lpc55_areas = { path = "lpc55_areas", default-features = false }
lpc55_sign = { path = "lpc55_sign", default-features = false }
