cargo-features = ["resolver", "named-profiles"]

[workspace]
members = [
    "lpc55_areas",
    "lpc55_sign",
    "lpc55_sign_bin",
    "lpc55_isp",
    "measurement_token",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1", default-features = false, features = ["std", "backtrace"] }
bitfield = { version = "0.19.0", default-features = false }
byteorder = { version = "1.4.3", default-features = false, features = ["std"] }
clap = { version = "4", default-features = false, features = ["std", "derive", "default", "wrap_help"] }
colored = { version = "3", default-features = false }
const-oid = { version = "0.9", default-features = false }
crc-any = { version = "2.4.3", default-features = false }
der = { version = "0.7.5", default-features = false, features = ["std"] }
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
log = { version = "0.4", default-features = false }
num-derive = { version = "0.4", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
packed_struct = { version = "0.10.1", default-features = false, features = ["std"] }
parse_int = { version = "0.9.0", default-features = false }
pem-rfc7468 = { version = "0.7.0", features = ["std"] }
rsa = { version = "0.9.0", default-features = false, features = ["std", "pem", "serde", "sha2"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde-hex = { version = "0.1.0" }
serde_json = { version = "1.0.96" }
serialport = { git = "https://github.com/jgallagher/serialport-rs", branch = "illumos-support", default-features = false }
sha2 = { version = "0.10", default-features = false }
strum = { version = "0.27", default-features = false, features = ["std"] }
strum_macros = { version = "0.27", default-features = false }
thiserror = { version = "2" }
toml = { version = "0.9", default-features = false, features = ["serde"] }
x509-cert = { version = "0.2.1", default-features = false, features = ["std"] }
lpc55_areas = { path = "lpc55_areas", default-features = false }
lpc55_sign = { path = "lpc55_sign", default-features = false }
zerocopy = { version = "0.8", features = ["derive"] }
