[package]
name = "lpc55_areas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_struct = "0.10.0"
packed_struct_codegen = "0.10.0"
anyhow = "1.0.32"
byteorder = "1.3.4"
hex = "0.4.3"
parse_int = "0.4.0"
num-derive = { version = "0.3.0", features = [ "full-syntax" ] }
num-traits = "0.2.14"

[features]
default = ["binaries"]
binaries = []

[lib]
test = false
bench = false
