[package]
name = "lpc55_isp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
packed_struct = "0.10.0"
packed_struct_codegen = "0.10.0"
anyhow = "1.0.32"
serialport = "3.3.0"
crc-any = "2.3.5"
byteorder = "1.3.4"
structopt = "0.3.15"
hex = "0.4.3"
parse_int = "0.4.0"
lpc55_sign = { path = "../lpc55_sign", features = [] }
sha2 = "0.9.8"

[features]
default = ["binaries"]
binaries = []

[lib]
test = false
bench = false

[[bin]]
name = "lpc55_flash"
test = false
bench = false
required-features = ["binaries"]

[[bin]]
name = "cfpa-update"
test = false
bench = false
required-features = ["binaries"]

