[package]
name = "lpc55_isp"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
clap.workspace = true
crc-any.workspace = true
hex.workspace = true
lpc55_areas.workspace = true
num-derive.workspace = true
num-traits.workspace = true
packed_struct.workspace = true
parse_int.workspace = true
serialport.workspace = true
sha2.workspace = true
strum.workspace = true
strum_macros.workspace = true

[features]
default = ["binaries"]
binaries = []

[lib]
test = false
bench = false

[[bin]]
name = "lpc55_flash"
test = false
bench = false
required-features = ["binaries"]

[[bin]]
name = "cfpa-update"
test = false
bench = false
required-features = ["binaries"]
