[package]
name = "lpc55_sign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
clap.workspace = true
colored.workspace = true
crc-any.workspace = true
ecdsa.workspace = true
elliptic-curve.workspace = true
hex.workspace = true
lpc55_areas.workspace = true
p256.workspace = true
packed_struct.workspace = true
packed_struct_codegen.workspace = true
parse_int.workspace = true
rsa.workspace = true
serde.workspace = true
sha2.workspace = true
toml.workspace = true
x509-parser.workspace = true

[features]
default = ["binaries"]
binaries = []

[[bin]]
name = "lpc55_sign"
test = false
bench = false
required-features = ["binaries"]
