[package]
name = "lpc55_sign"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder.workspace = true
clap = { workspace = true, optional = true }
colored.workspace = true
crc-any.workspace = true
env_logger.workspace = true
hex.workspace = true
log.workspace = true
lpc55_areas.workspace = true
packed_struct.workspace = true
rsa.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
x509-parser.workspace = true

[features]
clap = ["dep:clap"]
