[package]
name = "lpc55_sign"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder.workspace = true
clap = { workspace = true, optional = true }
crc-any.workspace = true
const-oid = { workspace = true, features = ["db"]}
der.workspace = true
env_logger.workspace = true
hex.workspace = true
log.workspace = true
lpc55_areas.workspace = true
num-traits.workspace = true
packed_struct.workspace = true
pem-rfc7468.workspace = true
rsa.workspace = true
serde.workspace = true
serde-hex.workspace = true
sha2.workspace = true
thiserror.workspace = true
x509-cert.workspace = true
zerocopy.workspace = true

[features]
clap = ["dep:clap"]
