[package]
name = "lpc55_sign_bin"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
env_logger.workspace = true
log.workspace = true
lpc55_areas.workspace = true
lpc55_sign = { workspace = true, features = ["clap"] }
rsa.workspace = true
toml.workspace = true
x509-parser.workspace = true

[[bin]]
name = "lpc55_sign"
path = "src/main.rs"
