[package]
name = "lpc55_sign_bin"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
env_logger.workspace = true
log.workspace = true
lpc55_areas.workspace = true
lpc55_sign = { workspace = true, features = ["clap"] }
toml.workspace = true

[[bin]]
name = "lpc55_sign"
path = "src/main.rs"
