[package]
name = "lpc55_sign_bin"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
der.workspace = true
env_logger.workspace = true
hex.workspace = true
log.workspace = true
lpc55_areas.workspace = true
lpc55_sign = { workspace = true, features = ["clap"] }
pem-rfc7468.workspace = true
serde_json.workspace = true
toml = { workspace = true, features = ["parse", "display"] }
x509-cert.workspace = true
zerocopy.workspace = true

[[bin]]
name = "lpc55_sign"
path = "src/main.rs"
